# abloom

./: .gitignore  BENCHMARK.md  BENCHMARKS.md  CHANGELOG.md  IMPLEMENTATION.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
abloom/: __init__.py  _abloom.c  _abloom.pyi  xxhash.h
docs/: BENCHMARKING.md  IMPLEMENTATION.md  TESTING.md
scripts/: compare_bf.py  generate_benchmark_report.py  generate_benchmark_report_v2.py  generate_lut.py
tests/: conftest.py  test_benchmark.py  test_core_operations.py  test_edge_cases.py  test_fpr.py  test_functionality.py  test_properties.py  test_serializable_mode.py  test_serialization.py
