[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abloom"
version = "0.1.0"
description = "High-performance Bloom filter for Python"
requires-python = ">=3.8"
readme = "README.md"
authors = [{ name = "Andrew Pribe", email = "andrewpribe@gmail.com" }]
license = {text = "MIT"}
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ampribe/abloom"

[project.scripts]
benchmark-report = "analysis.generate_benchmark_report:main"

[tool.setuptools]
packages = ["abloom"]

[tool.setuptools.package-data]
abloom = ["py.typed", "*.pyi"]

[dependency-groups]
# Core test dependencies - must work with Python 3.8+
test = [
    "hypothesis>=6.79.4",
    "pytest>=7.4.4",
    "pytest-benchmark>=4.0.0",
    "tox>=4.0",
    "tox-uv>=1.0",
]
benchmark = [
    "fastbloom-rs>=0.5.10",
    "pybloom-live>=4.0.0",
    "pybloomfiltermmap3>=0.6.3",
    "rbloom>=1.5.4",
]
dev = [
    {include-group = "test"},
    {include-group = "benchmark"},
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
]

[tool.pytest.ini_options]
addopts = [
    "--benchmark-warmup=on",
    "--benchmark-min-rounds=20",
    "--benchmark-calibration-precision=10",
    "--benchmark-disable-gc",
]
